--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This is a really simple greasemonkey script to remove the comments from
-CBC news articles. Nothing makes me angrier than reading those things.
+CBC and Toronto Star news articles. Nothing makes me angrier than reading
+those things.
 
 usage
 ========
