removed references to Toronto Star. Their style changed and it no longer bothers me.

--- a/README
+++ b/README
@@ -5,3 +5,7 @@ those things.
 usage
 ========
 just install this as a greasemonkey script and it'll work all on its lonesome.
+
+Changes
+========
+08 Oct 2009 - removed the Toronto Star references due to a change in the page styling.
